# person-cli-rs

./: .gitignore  Cargo.toml  README.md
src/: app.rs  auth.rs  change.rs  create.rs  lib.rs  loader.rs  main.rs  pictures.rs  resize.rs  settings.rs  sign.rs  users.rs
