[package]
name = "person_cli"
version = "0.0.2"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"

[lib]
name = "person_cli"
path = "src/lib.rs"

[[bin]]
name = "person_cli"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
reqwest = "0.9"
serde_json = "1.0"
url = "2.1"
cis_profile = { git = "https://github.com/fiji-flo/cis_profile-rust", version = "0.1.3", branch = "0.1.3", features = ["aws"] }
cis_client = { git = "https://github.com/fiji-flo/cis_client-rust", version = "0.1.5", branch = "0.1.5" }
config = "0.9"
serde = "1.0.80"
serde_derive = "1.0.80"
failure = "0.1"
base64 = "0.10"
chrono = "0.4.6"
