[package]
name = "person_cli"
version = "0.1.0"
authors = ["Florian Merz <me@fiji-flo.de>"]
edition = "2018"

[lib]
name = "person_cli"
path = "src/lib.rs"

[[bin]]
name = "person_cli"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
reqwest = "0.10"
serde_json = "1.0"
url = "2.1"
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", branch = "0.7", version = "0.7", features = ["sync"] }
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", branch ="0.4", version = "0.4", features = ["aws"] }
config = "0.10"
serde = "1.0.80"
serde_derive = "1.0.80"
failure = "0.1"
base64 = "0.12"
chrono = "0.4.6"
jsonschema-valid = "0.4.0"
tokio = "0.2"
time = "0.2.16"
dirs = "3"